[package]
authors = ["eV <ev@7pr.xyz>"]
name = "molysite"
version = "0.1.0"

[dependencies.nom]
features = ["nightly"]
path = "../nom"

[dependencies.serde_json]
optional = true
version = "1.0.9"

[dev-dependencies]
serde_derive = "1.0.27"

[dev-dependencies.serde]
version = "1.0.27"

[features]
arraynested = []
withserde = ["serde_json"]
